--- a/.github/workflows/retention-policy.yaml
+++ b/.github/workflows/retention-policy.yaml
@@ -1,4 +1,4 @@
-name: container-retention-policy
+name: retention-policy
 
 on:
   schedule:
@@ -6,9 +6,9 @@ on:
   workflow_dispatch:
 
 jobs:
-  container-retention-policy:
+  retention-policy:
     runs-on: ubuntu-latest
-    concurrency: container-retention-policy
+    concurrency: retention-policy
     steps:
       - id: name
         name: name
@@ -19,4 +19,9 @@ jobs:
         with:
           package-name: ${{ steps.name.outputs.value }}
           package-type: 'container'
+          min-versions-to-keep: 10
+      - uses: actions/delete-package-versions@v4
+        with:
+          package-name: ${{ steps.name.outputs.value }}
+          package-type: 'npm'
           min-versions-to-keep: 10
