--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -38,17 +38,17 @@
     "@types/fs-extra": "11.0.1",
     "@types/lodash-es": "4.17.7",
     "@types/mocha": "10.0.1",
-    "@types/node": "20.0.0",
+    "@types/node": "20.1.0",
     "@types/url-join": "4.0.1",
     "@types/wrap-ansi": "8.0.1",
     "@typescript-eslint/eslint-plugin": "5.59.2",
     "@typescript-eslint/parser": "5.59.2",
     "c8": "7.13.0",
     "chai": "4.3.7",
-    "eslint": "8.39.0",
+    "eslint": "8.40.0",
     "eslint-config-escapace": "3.17.0",
     "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-editorconfig": "4.0.2",
+    "eslint-plugin-editorconfig": "4.0.3",
     "eslint-plugin-no-null": "1.0.2",
     "lint-staged": "13.2.2",
     "mocha": "10.2.0",
@@ -61,6 +61,12 @@
   "engines": {
     "node": ">=18.15.0",
     "pnpm": ">=8.0.0"
+  },
+  "exports": {
+    ".": {
+      "import": "./lib/esm/index.mjs",
+      "types": "./lib/types/index.d.ts"
+    }
   },
   "files": [
     "lib/cli",
