--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -9,14 +9,15 @@
   "bugs": "https://github.com/escapace/web-fonts/issues",
   "dependencies": {
     "@sindresorhus/fnv1a": "3.0.0",
+    "@types/clean-css": "4.2.6",
     "arg": "5.0.2",
     "browserslist": "4.21.5",
     "bytes": "3.1.2",
     "chalk": "5.2.0",
+    "clean-css": "5.3.2",
     "csstype": "3.1.2",
     "esbuild": "0.17.19",
     "execa": "7.1.1",
-    "fast-glob": "3.2.12",
     "find-up": "6.3.0",
     "fontfaceobserver": "2.3.0",
     "fontkit": "2.0.2",
@@ -25,7 +26,7 @@
     "lightningcss": "1.20.0",
     "lodash-es": "4.17.21",
     "mlly": "1.2.1",
-    "ora": "6.3.0",
+    "ora": "6.3.1",
     "safe-stable-stringify": "2.4.3",
     "strip-ansi": "7.0.1",
     "url-join": "5.0.0",
@@ -40,14 +41,14 @@
     "@types/fs-extra": "11.0.1",
     "@types/lodash-es": "4.17.7",
     "@types/mocha": "10.0.1",
-    "@types/node": "20.1.3",
+    "@types/node": "20.2.3",
     "@types/url-join": "4.0.1",
     "@types/wrap-ansi": "8.0.1",
-    "@typescript-eslint/eslint-plugin": "5.59.5",
-    "@typescript-eslint/parser": "5.59.5",
+    "@typescript-eslint/eslint-plugin": "5.59.6",
+    "@typescript-eslint/parser": "5.59.6",
     "c8": "7.13.0",
     "chai": "4.3.7",
-    "eslint": "8.40.0",
+    "eslint": "8.41.0",
     "eslint-config-escapace": "3.17.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-editorconfig": "4.0.3",
@@ -72,8 +73,8 @@
   },
   "files": [
     "lib/cli",
-    "src/utilities/font-loader.ts",
-    "src/utilities/font-strip.py"
+    "src/font/font-loader.ts",
+    "src/font/font-strip.py"
   ],
   "homepage": "https://github.com/escapace/web-fonts",
   "license": "MPL-2.0",
