--- a/packages/web-fonts/package.json
+++ b/packages/web-fonts/package.json
@@ -9,9 +9,9 @@
     "zod": "3.21.4"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.59.5",
-    "@typescript-eslint/parser": "5.59.5",
-    "eslint": "8.40.0",
+    "@typescript-eslint/eslint-plugin": "5.59.6",
+    "@typescript-eslint/parser": "5.59.6",
+    "eslint": "8.41.0",
     "eslint-config-escapace": "3.17.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-editorconfig": "4.0.3",
@@ -38,6 +38,7 @@
   "private": false,
   "scripts": {
     "build": "node ../../scripts/build.mjs && cp src/types.d.ts lib/types",
+    "copy-types": "cp ../container/lib/types/state/user-schema.d.ts src/types.d.ts",
     "lint": "eslint 'src/**/*.{js,mjs,cjs,ts,mts,cts}'",
     "release": "node ../../scripts/release.mjs",
     "typecheck": "tsc --noEmit"
