--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -11,6 +11,7 @@
     "@sindresorhus/fnv1a": "3.0.0",
     "@types/clean-css": "4.2.6",
     "arg": "5.0.2",
+    "bignumber.js": "9.1.1",
     "browserslist": "4.21.5",
     "bytes": "3.1.2",
     "chalk": "5.2.0",
