--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -8,6 +8,7 @@ updates:
       time: '07:00'
       timezone: GMT
   - package-ecosystem: pip
+    directory: '/'
     schedule:
       interval: weekly
       day: saturday
